# data-python

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
bil/api/: __init__.py  abstracts.py  formatNPSL.py  formatS.py
bil/api/utils/: __init__.py  b_helpers.py  fetch.py  pickle.py  subject.py
bil/dataclass/: __init__.py  abstracts.py  dataclassA.py
bil/dataclass/utils/: fetch.py  pickle.py  subject.py
demo/md/: quickstart.md
doc/: quickstart.ipynb  quickstart.md
docs/: quickstart.ipynb  quickstart.md
scripts/: nb_to_md.py  release.sh
tests/: test_public.py
